--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,7 @@
     <body>
         <h1>Hello Coursera!</h1>
         <p>It's a great course.</p>
+		<p>This is a Git push test</p>
     </body>
 
 </html>
